<resources>

    <!--COMMON-->
    <string name="app_name">Retrofit Check</string>
    <string name="app_check_internet_connection">Please check your network! You are offline.</string>
    <string name="app_updating_content">Updating..</string>
    <string name="app_not_implemented">Not implemented!</string>

    <!--LOGIN-->
    <string name="app_login_title">Log In</string>
    <string name="app_welcome">Welcome to Test App</string>

    <string name="login_name_hint">test_user</string>
    <string name="login_password_hint">******</string>
    <string name="login_btn_sign_up">Sign up</string>
    <string name="login_btn_sign_in">Sign in</string>
    <string name="login_password_not_valid">Password not valid!</string>
    <string name="login_name_not_valid">Name not valid!</string>

    <!--MAIN-->
    <string name="menu_item_sign_out">Sign out</string>
</resources>
