<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/app_welcome"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/login_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp"
        android:ems="10"
        android:hint="@string/login_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_password"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn_sign_in" />

    <Button
        android:id="@+id/login_btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_password"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn_sign_up" />

    <TextView
        android:id="@+id/login_dev_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="24dp"
        android:text="DEV"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />
</RelativeLayout>